added slider basic and some images

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,5 +11,8 @@
  *= require_self
  *= require styles
  *= require css3
+ *= require themes/default/default
+ *= require nivo-slider
+ *= require custom
  *= require_tree .
  */
